fixed nav bar z-index issue

--- a/fitome/styles/navigationBar.css
+++ b/fitome/styles/navigationBar.css
@@ -11,6 +11,7 @@
     padding: 0;
     list-style-type: none;
     text-decoration: none;
+    z-index: 1000;
 }
 
 .navigationBar_icon {
