--- a/fitome/styles/workoutsExercisesBar.css
+++ b/fitome/styles/workoutsExercisesBar.css
@@ -11,6 +11,7 @@
   list-style-type: none;
   text-decoration: none;
   color: white;
+  z-index: 1000;
 }
 
 .workoutsExercisesBar_workout {
